name:                git-rehi
version:             0.6.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/max630/git-rehi#readme
license:             GPL-2
license-file:        LICENSE
author:              Max Kirillov
maintainer:          max@max630.net
category:            Git
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable git-rehi
  hs-source-dirs:      app
  main-is:             Rehi.hs
  other-modules:       Rehi.Utils
                       , Rehi.ArgList
                       , Rehi.Regex
                       , Rehi.GitTypes
                       , Rehi.GitCommands
                       , Rehi.IO
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Rehi.main
  build-depends:       base
                       , bytestring
                       , containers
                       , HUnit
                       , exceptions
                       , mtl
                       , process
                       , transformers
                       , directory
                       , text
  if os(windows)
    build-depends:     regex-pcre-builtin
  else
    build-depends:     regex-pcre
  default-language:    Haskell2010

-- executable git-rehi-test
--   hs-source-dirs:      app
--   main-is:             Test.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                        , transformers
--                        , directory
--   default-language:    Haskell2010
